[project]
name = "oft-tracker_cpoy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "filterpy>=1.4.5",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lapx>=0.9.2",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyqt6>=6.10.0",
    "seaborn>=0.13.2",
    "tkinterdnd2>=0.4.3",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.233",
]
